# HYGUI

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/Writerside/: hd.tree  redirection-rules.xml  writerside.cfg
doc/Writerside/cfg/: buildprofiles.xml
doc/Writerside/topics/: API参考.md  Application.md  HYExit.md  HYInit.md  HYWindowCreate.md  HYWindowDestroy.md  HYWindowGetWindowFromHandle.md  HYWindowMessageLoop.md  HYWindowSendEvent.md  HYWindowShow.md  HYWindowSkinHook.md  HYWindowUserDataAdd.md  HYWindowUserDataRemove.md  Object-h.md  Window-h.md
examples/CloudMusic/: layout.cpp  layout.h  main_window.cpp
examples/data/: hashtable.cpp
examples/event/: events.cpp
examples/helloworld/: helloworld.cpp  main.cpp
examples/text/: paragraph.cpp
include/HYGUI/: Application.h  Color.h  Cursor.h  Define.h  Draw.h  EditBox.h  Event.h  EventObject.h  EventObjectCallback.h  EventWindow.h  Font.h  HYApplication.h  HYAsyncQueueProcessor.h  HYCanvas.h  HYCoding.h  HYContext.h  HYCursor.h  HYDefine.h  HYException.h  HYFont.h  HYFontMgr.h  HYFontStyle.h  HYGUI.h  HYImage.h  HYKeyCode.h  HYKeyboard.h  HYMemoryStream.h  HYMouse.h  HYPaint.h  HYPoint.h  HYRect.h  HYShader.h  HYString.h  HYSurface.h  HYTypeDef.h  HYTypeface.h  HYWidget.h  HYWindow.h  Image.h  KeyCode.h  (+14 more)
include/HYGUI/Helper/: Data.h  Encode.h  Files.h  Memory.h  Thread.h
include/HYGUI/Widgets/: HYLabel.h
include/HYGUI/coding/: str.h
include/HYGUI/core/: HString.h  application.h  define.h  window.h
include/HYGUI/utils/: EventBase.h  event_base.h  help.h  widget.h  widget_builder.h  widget_event.h  widget_function.h  window.h  window_builder.h  window_event.h
interior/include/: Defer.h  PrivateDefinition.h  ResourceManage.h  emoji_font_resource.h  logs.h  utils_font_resource.h
modules/: .gitignore
scripts/: sdl.cmake
src/Helper/Data/: HashTable.cpp
src/Helper/Encode/: encode.cpp
src/Helper/Files/: io.cpp
src/Helper/Memory/: Controls.cpp
src/Helper/thread/: thread.cpp
src/Helper/utils/: func.cpp
src/algorithm/: AsyncQueueProcessor.cpp
src/application/: init.cpp
src/coding/: str.cpp  string.cpp
src/components/: edit_box.cpp  object_label.cpp
src/core/: Paint.cpp  application.cpp  canvas.cpp  color.cpp  direct_context.cpp  draw.cpp  event.cpp  font.cpp  font_mgr.cpp  font_style.cpp  key_code.cpp  keyboard.cpp  object.cpp  object_label.cpp  paint.cpp  prewindow_win.cpp  shader.cpp  shader_gradient.cpp  surface.cpp  typeface.cpp  typestyle.cpp  window.mm  window_linux.cpp  window_mac.cpp  window_mac.mm  winodw.cpp  winodw_win.cpp
src/core/app/: init.cpp  wnd.cpp
src/core/image/: load.cpp
src/core/widget/: widger_builder.cpp  widget_base.cpp  widget_event.cpp  widget_function.cpp  widget_label.cpp
src/core/window/: window.cpp  window_builder.cpp  window_event.cpp  window_func.cpp  window_mac.cpp  window_mac.mm
src/font/: font.cpp  typeface.cpp
src/layout/: text.cpp
src/manage/: resource_manage.cpp
src/module/: HString.cpp  image.cpp  memory_stream.cpp  string.cpp
src/paragraph/: paragraph_builder_impl.cpp
src/resource/: image.cpp  image.mm  utils_font_resource.cpp
src/text/: check.cpp  emoji_map.cpp  text_blob.cpp
src/types/: string.cpp
src/utils/: color.cpp  cursor.cpp  key_code.cpp  keyboard.cpp  mouse.cpp  point.cpp  rect.cpp
src/utils/fmt_u/: format.cc  os.cc
src/utils/hygui/: color.cpp  mouse.cpp  mouse.mm  point.cpp
src/window/: windows.cpp
tools/bin2c/: bin2c.cpp
tools/font/: README.md  dump_glyph.py  emoji_map.inl  emoji_map.txt  emojidata.go  gen_cpp.go  simpfont.py
tools/generate_emoji_code/: generate_emoji_code.cpp
